Add start of user creation form

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,8 @@
       </p>
       <div class="signup">
         <a class="pure-button pure-button-primary" href="#">Login</a>
-        <a class="pure-button pure-button-primary" href="#">Signup</a>
+        <%= link_to "Signup", signup_path, class: "pure-button pure-button-primary" %>
+        <!-- <a class="pure-button pure-button-primary" href="#">Signup</a> -->
       </div>
   </div>
 </div>
