--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,23 @@
-<form class="pure-form pure-form-aligned">
-  <fieldset>
-    <div class="pure-control-group">
-      <label for="aligned-name">Name</label>
-      <input type="text" id="aligned-name" placeholder="Name" />
-      <span class="pure-form-message-inline">This is a required field.</span>
-    </div>
-    <div class="pure-control-group">
-      <label for="aligned-email">Email Address</label>
-      <input type="email" id="aligned-email" placeholder="Email Address" />
-      <span class="pure-form-message-inline">This is a required field.</span>
-    </div>
-    <div class="pure-control-group">
-      <label for="aligned-password">Password</label>
-      <input type="password" id="aligned-password" placeholder="Password" />
-      <span class="pure-form-message-inline">This is a required field.</span>
-    </div>
-    <div class="pure-controls">
-      <label for="aligned-cb" class="pure-checkbox">
-      <button type="submit" class="pure-button pure-button-primary">Submit</button>
-    </div>
-  </fieldset>
-</form>
+<div class="splash-container">
+  <div class="splash splash-signup">
+ 		<div class="signup">
+	  	<h2>Please enter the following fields to register. All fields are required.</h2>
+
+			<%= form_with model: @user, class: "pure-form pure-form-aligned" do |f| %>
+				<%= f.label :name %>
+			  <%= f.text_field :name, autofocus: true %>
+
+			  <%= f.label :email %>
+			  <%= f.text_field :email, autofocus: true %>
+
+			  <%= f.label :password %>
+			  <%= f.password_field :password %>
+
+    		<%= f.label :password_confirmation %>
+    		<%= f.password_field :password_confirmation %>
+
+			  <%= f.submit "Submit", class: "pure-button pure-button-primary" %>
+			<% end %>
+		</div>
+	</div>
+</div>
