Weeks and games on page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,9 @@
 			  <%= f.label :email %>
 			  <%= f.text_field :email, autofocus: true %>
 
+			  <%= f.label :username %>
+			  <%= f.text_field :username, autofocus: true %>
+
 			  <%= f.label :password %>
 			  <%= f.password_field :password %>
 
