--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,33 @@
   </head>
 
   <body>
+
+    <% if current_user %>
+      <div class="header">
+        <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+          <a class="pure-menu-heading" href="">Tip Time</a>
+
+          <ul class="pure-menu-list">
+            <li class="pure-menu-item"><div class="pure-menu-link"><%= "Logged in as #{current_user.username}" %></div></li>
+            <li class="pure-menu-item"><a href="#" class="pure-menu-link">This Week</a></li>
+            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Rankings</a></li>
+            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Rules</a></li>
+            <li class="pure-menu-item"><%= link_to 'Logout', logout_path, method: :delete, class: "pure-menu-link" %></li>
+          </ul>
+        </div>
+      </div>
+    <% end %>
+
+    <div>
+      <% if notice %>
+        <%= notice %>
+      <% end %>
+
+      <% if alert %>
+        <%= alert %>
+      <% end %>
+    </div>
+
     <%= yield %>
   </body>
 </html>
