All the changes - whooops

--- a/app/assets/stylesheets/week.css
+++ b/app/assets/stylesheets/week.css
@@ -37,3 +37,11 @@
 	color: #1f8dd6 !important;
 	font-weight: bold;
 }
+
+.game .selected {
+	background: #02b87b !important;
+}
+
+.week-games .score {
+	color: black !important;
+}
