--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,6 +16,13 @@
       </h1>
       <p class="splash-subhead">
         College Basketball Pick Em' 2020-2021 Season
+    Things to fix:
+    - Logout functionality
+    - Weeks controller not working properly
+    - Scroll
+    - Rules
+    - Previous games
+    - Standings
       </p>
       <div>
         <%= link_to "Login", login_path, class: "pure-button pure-button-primary" %>
